--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/Hero.astro';
+import SectionContainer from '../components/SectionContainer.astro';
+import Briefcase from '../components/icons/Briefcase.astro';
+import TitleSection from '../components/TitleSection.astro';
+import Experience from '../components/Experience.astro';
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout title="Enrique Martín - Dev Portfolio">
+	<main class="px-4 flex flex-col items-center justify-center">
+		<SectionContainer class="py-16 md:py-36 flex justify-center">
+			<Hero />
+		</SectionContainer>
+		<SectionContainer id="experience" class="flex flex-col justify-center">
+			<TitleSection >
+				<Briefcase class="size-8" />
+				Work Experience
+			</TitleSection>
+			<Experience />
+		</SectionContainer>
+	</main>
+</BaseLayout>
