fix: secion container bug

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -12,7 +12,7 @@ const EXPERIENCE = [
 		date: 'March 2025 - Today...',
 		title: 'Freelancer/Hiring',
 		description:
-			'Available to work for any interested business or project. Meanwhile I keep my skills sharp developing personal projects and contributing to open source.',
+			'Available for worknig for any interested business or project. Meanwhile I keep my skills sharp developing personal projects and contributing to open source.',
 	},
 ];
 ---
