--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,13 +15,16 @@ const year = new Date().getFullYear();
 					<a href="/" class="me-4 md:me-6">Home</a>
 				</li>
 				<li>
-					<a href="/about" class="me-4 md:me-6">About</a>
+					<a href="/#experience" class="me-4 md:me-6">Experience</a>
 				</li>
 				<li>
-					<a href="/projects" class="me-4 md:me-6">Projects</a>
+					<a href="/#projects" class="me-4 md:me-6">Projects</a>
 				</li>
 				<li>
-					<a href="/contact" class="me-4 md:me-6">Contact</a>
+					<a href="/#about" class="me-4 md:me-6">About</a>
+				</li>
+				<li>
+					<a href="mailto:enriquemartin1402@gmail.com" class="me-4 md:me-6">Contact</a>
 				</li>
 			</ul>
 		</div>
