--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import X from './icons/X.astro';
 import Mail from './icons/Mail.astro';
 import Github from './icons/Github.astro';
 import { Image } from 'astro:assets';
-import profilePic from '/public/profile-pic.png';
+import profilePic from '/public/profile-pic.webp';
 ---
 <div class="flex gap-4 mb-4">
 	<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-16" loading={"eager"} />
