--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,12 @@ import Briefcase from '../components/icons/Briefcase.astro';
 import TitleSection from '../components/TitleSection.astro';
 import Experience from '../components/Experience.astro';
 import Codeincon from '../components/icons/Codeicon.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <BaseLayout title="Enrique Martín - Dev Portfolio">
 	<main class="px-4 flex flex-col items-center justify-center">
-		<SectionContainer class="py-16 md:py-36 flex flex-col justify-center max-w-xl">
+		<SectionContainer class="py-12 md:py-24 flex flex-col justify-center max-w-xl">
 			<Hero />
 		</SectionContainer>
 
@@ -27,6 +28,6 @@ import Codeincon from '../components/icons/Codeicon.astro';
 				<Codeincon class="size-8" />
 				Projects
 			</TitleSection>
-			{/* Projects component goes here */}
+			<Projects />
 	</main>
 </BaseLayout>
