--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 		<a href="/">Home</a>
 		<a href="/#experience">Experience</a>
 		<a href="/#projects">Projects</a>
-		<a href="/#about">About</a>
+		<a href="/#skills">Skills</a>
 		<a href="/#contact">Contact</a>
 	</nav>
 </header>
