--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import TitleSection from '../components/TitleSection.astro';
 import Experience from '../components/Experience.astro';
 import Codeincon from '../components/icons/Codeicon.astro';
 import Projects from '../components/Projects.astro';
+import Profile from '../components/icons/Profile.astro';
+import About from '../components/About.astro';
 ---
 
 <BaseLayout title="Enrique Martín - Dev Portfolio">
@@ -29,5 +31,14 @@ import Projects from '../components/Projects.astro';
 				Projects
 			</TitleSection>
 			<Projects />
+		</SectionContainer>
+
+		<SectionContainer id="skills" class="flex flex-col justify-center py-12 md:py-24">
+			<TitleSection>
+				<Profile class="size-8" />
+				About me
+			</TitleSection>
+			<About />
+		</SectionContainer>
 	</main>
 </BaseLayout>
