--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,22 +6,22 @@ const year = new Date().getFullYear();
 <footer class="bg-neutral-950 rounded-lg shadow-sm">
 	<div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
 		<div class="sm:flex sm:items-center sm:justify-between">
-			<a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+			<a href="/portfolio" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
 				<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-20" loading={"lazy"} />
 				<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Enrique Martín</span>
 			</a>
 			<ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
 				<li>
-					<a href="/" class="me-4 md:me-6">Home</a>
+					<a href="/portfolio" class="me-4 md:me-6">Home</a>
 				</li>
 				<li>
-					<a href="/#experience" class="me-4 md:me-6">Experience</a>
+					<a href="/portfolio#experience" class="me-4 md:me-6">Experience</a>
 				</li>
 				<li>
-					<a href="/#projects" class="me-4 md:me-6">Projects</a>
+					<a href="/portfolio#projects" class="me-4 md:me-6">Projects</a>
 				</li>
 				<li>
-					<a href="/#about" class="me-4 md:me-6">About</a>
+					<a href="/portfolio/#skills" class="me-4 md:me-6">Skills</a>
 				</li>
 				<li>
 					<a href="mailto:enriquemartin1402@gmail.com" class="me-4 md:me-6">Contact</a>
