--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 <header class="flex items-center justify-center mx-auto mt-4 w-full"> 
 	<nav class="flex flex-row gap-x-6">
-		<a href="/">Home</a>
-		<a href="/#experience">Experience</a>
-		<a href="/#projects">Projects</a>
-		<a href="/#skills">Skills</a>
-		<a href="/#contact">Contact</a>
+		<a href="/portfolio">Home</a>
+		<a href="/portfolio/#experience">Experience</a>
+		<a href="/portfolio/#projects">Projects</a>
+		<a href="/portfolio/#skills">Skills</a>
+		<a href="mailto:enriquemartin1402@gmail.com">Contact</a>
 	</nav>
 </header>
 
