feat(deploy): change internal broken links
adding base tag broke them

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -3,5 +3,5 @@
 <meta name="description" content="Showcase of Enrique's work as a full stack developer. Projects, skills, and contact information.">
 <meta name="keywords" content="full stack developer, web developer, portfolio, projects, React, Node.js, Python, Go, Bun, Astro, NextJs, Spain, remote work">
 <link rel="canonical" href="https://www.yourdomain.com/">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta name="generator" content={Astro.generator} />
