--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -117,7 +117,7 @@ const PROJECTS = [
 		description:
 			'It is more like a hobby than a pofessional project. I keep my dotfiles in a public repo to share with others and to have a backup of my configurations.',
 		github: { link1: 'https://github.com/tyrellw3llick/.dotfiles' },
-		image: '/dotfiles.webp',
+		image: 'dotfiles.webp',
 		tags: [TAGS.LUA, TAGS.BASH],
 	},
 	{
@@ -149,7 +149,7 @@ const PROJECTS = [
 		description:
 			"A Go web application built while following Let's Go by Alex Edwards. This project implements a production-ready web app with features like routing, templating, and database integration, serving as a learning exercise in Go web development. Ecerything is built from scratch only using the standard library.",
 		github: { link1: 'https://github.com/tyrellw3llick/letsgo' },
-		image: '/letsgo.webp',
+		image: 'letsgo.webp',
 		tags: [TAGS.GO, TAGS.MySQL],
 	},
 	{
@@ -157,7 +157,7 @@ const PROJECTS = [
 		description:
 			'Crypto tokens data scraper for the site gmg.one. The data is exported as json format or sent to a telegram bot. The bot is able to send the data to a channel or to a user.',
 		github: { link1: 'https://github.com/tyrellw3llick/WedjatAI' },
-		image: '/gmgn-scraper.webp',
+		image: 'gmgn-scraper.webp',
 		tags: [TAGS.PYYHON, TAGS.PLAYWRIGHT, TAGS.TELEGRAM],
 	},
 	{
@@ -165,7 +165,7 @@ const PROJECTS = [
 		description:
 			'Just my personal portfolio site. I built it using Astro, Tailwindcss, and Bun. I wanted to try Astro and Bun. I am very happy with the result.',
 		github: { link1: 'https://github.com/tyrellw3llick/portfolio' },
-		image: '/personal-portfolio.webp',
+		image: 'personal-portfolio.webp',
 		tags: [TAGS.ASTRO, TAGS.TAILWIND],
 	},
 ];
