--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,33 +3,33 @@ import { Image } from 'astro:assets';
 import profilePic from '/public/profile-pic.webp';
 const year = new Date().getFullYear();
 ---
-<footer class="bg-neutral-950 rounded-lg shadow-sm">
+<footer class="bg-neutral-950 rounded-lg shadow-sm mt-12">
 	<div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-		<div class="sm:flex sm:items-center sm:justify-between">
-			<a href="/portfolio" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-				<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-20" loading={"lazy"} />
-				<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Enrique Martín</span>
+		<div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-6">
+			<a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+				<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" width={80} height={80} loading={"lazy"} />
+				<span class="self-center text-xl sm:text-2xl font-semibold whitespace-nowrap dark:text-white">Enrique Martín</span>
 			</a>
-			<ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+			<ul class="flex flex-wrap items-center justify-center gap-y-2 gap-x-4 text-sm font-medium text-gray-500 mb-4 sm:mb-0 dark:text-gray-400">
 				<li>
-					<a href="/portfolio" class="me-4 md:me-6">Home</a>
+					<a href="/" class="hover:text-[var(--accent-color-yellow)]">Home</a>
 				</li>
 				<li>
-					<a href="/portfolio#experience" class="me-4 md:me-6">Experience</a>
+					<a href="/#experience" class="hover:text-[var(--accent-color-yellow)]">Experience</a>
 				</li>
 				<li>
-					<a href="/portfolio#projects" class="me-4 md:me-6">Projects</a>
+					<a href="/#projects" class="hover:text-[var(--accent-color-yellow)]">Projects</a>
 				</li>
 				<li>
-					<a href="/portfolio/#skills" class="me-4 md:me-6">Skills</a>
+					<a href="/#skills" class="hover:text-[var(--accent-color-yellow)]">Skills</a>
 				</li>
 				<li>
-					<a href="mailto:enriquemartin1402@gmail.com" class="me-4 md:me-6">Contact</a>
+					<a href="mailto:enriquemartin1402@gmail.com" class="hover:text-[var(--accent-color-yellow)]">Contact</a>
 				</li>
 			</ul>
 		</div>
 		<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-		<span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© {year}. All Rights Reserved.</span>
+		<span class="block text-sm text-gray-500 text-center dark:text-gray-400">© {year}. All Rights Reserved.</span>
 	</div>
 </footer>
 
