--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -196,6 +196,7 @@ const PROJECTS = [
 				) : (
 				<SocialBadge href={github.link1}>Github Repo</SocialBadge>
 				)}
+				{link && <SocialBadge href={link} >{linkText}</SocialBadge>}
 			</div>
 )}
 		</ul>
