--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -4,7 +4,7 @@ const { class: className, id } = Astro.props;
 <section
   id={id}
   data-section={id}
-  class={`section ${className} scroll-m-20 w-full mx-auto container lg:max-w-xl md:max-w-lg`}
+  class={`section ${className} scroll-m-20 w-full mx-auto container px-4 sm:px-6 md:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-3xl`}
 >
   <slot />
 </section>
