fix:removed dark theme
It was creating a lot of unexpected style errors

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -6,7 +6,7 @@ const { techName, techIcon: Icon } = Astro.props;
 <div class="tech-card group">
   <div class="card-content">
     <Icon class="size-8 mb-2 group-hover:scale-110 transition-transform duration-300" />
-    <h3 class="text-base font-medium">{techName}</h3>
+    <h3 class="text-base text-neutral-200 font-medium">{techName}</h3>
   </div>
 </div>
 
