--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,8 +15,8 @@ import profilePic from '/public/profile-pic.webp';
 </div>
 
 <div class="space-y-4">
-	<h1 class="font-bold text-3xl sm:text-4xl md:text-5xl tracking-tight text-gray-800 dark:text-white">Hey, I'm Enrique</h1>
-	<p class="text-lg sm:text-xl text-gray-800 dark:[&>strong]:text-[#f0ee54] [&>strong]:text-[#f0ee54] [&>strong]:font-semibold dark:text-gray-300">I'm a <strong>full-stack</strong> developer specialized in building unique <strong>web3</strong> apps, <strong>automating</strong> workflows and integrating <strong>AI</strong>.</p>
+	<h1 class="font-bold text-3xl sm:text-4xl md:text-5xl tracking-tight text-white">Hey, I'm Enrique</h1>
+	<p class="text-lg sm:text-xl [&>strong]:text-[#f0ee54] [&>strong]:font-semibold text-gray-300">I'm a <strong>full-stack</strong> developer specialized in building unique <strong>web3</strong> apps, <strong>automating</strong> workflows and integrating <strong>AI</strong>.</p>
 </div>
 
 <nav class="flex flex-wrap mt-6 sm:mt-8 gap-3 sm:gap-4">
