--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -185,7 +185,7 @@ const PROJECTS = [
 			</li>
 			))}
 			<img src={image} alt={`Project ${title} screenshot`} class="rounded-lg shadow-2xl shadow-white/10" />
-			<p class="text-lg mt-6 dark:text-gray-300 text-pretty">{description}</p>
+			<p class="text-lg mt-6 text-gray-300 text-pretty">{description}</p>
 			{github && (
 			<div class="flex gap-4 mt-2">
 				{github.link2 ? (
