--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -60,8 +60,8 @@ const SKILLS = {
 
 <section id="skills" class="py-16">
   <div class="flex items-center">
-    <Codeicon class="size-8" />
-    <h3 class="text-xl">Technical Skills</h3>
+    <Codeicon class="size-8 text-neutral-100" />
+    <h3 class="text-xl text-neutral-100">Technical Skills</h3>
   </div>
 
   <div class="space-y-8 mt-8">
