--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,9 +8,9 @@ const year = new Date().getFullYear();
 		<div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-6">
 			<a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
 				<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" width={80} height={80} loading={"lazy"} />
-				<span class="self-center text-xl sm:text-2xl font-semibold whitespace-nowrap dark:text-white">Enrique Martín</span>
+				<span class="self-center text-xl sm:text-2xl font-semibold whitespace-nowrap text-white">Enrique Martín</span>
 			</a>
-			<ul class="flex flex-wrap items-center justify-center gap-y-2 gap-x-4 text-sm font-medium text-gray-500 mb-4 sm:mb-0 dark:text-gray-400">
+			<ul class="flex flex-wrap items-center justify-center gap-y-2 gap-x-4 text-sm font-medium mb-4 sm:mb-0 text-gray-400">
 				<li>
 					<a href="/" class="hover:text-[var(--accent-color-yellow)]">Home</a>
 				</li>
@@ -28,8 +28,8 @@ const year = new Date().getFullYear();
 				</li>
 			</ul>
 		</div>
-		<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-		<span class="block text-sm text-gray-500 text-center dark:text-gray-400">© {year}. All Rights Reserved.</span>
+		<hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
+		<span class="block text-sm text-center text-gray-400">© {year}. All Rights Reserved.</span>
 	</div>
 </footer>
 
