--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,12 +4,10 @@ import SocialBadge from './SocialBadge.astro';
 import X from './icons/X.astro';
 import Mail from './icons/Mail.astro';
 import Github from './icons/Github.astro';
-import { Image } from 'astro:assets';
-import profilePic from '/public/profile-pic.webp';
 ---
 <div class="flex flex-col sm:flex-row sm:items-center gap-4 mb-6">
 	<div class="flex items-center gap-4">
-		<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" width={80} height={80} loading={"eager"} />
+		<img src="profile-pic.webp" alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" loading={"eager"} />
 		<a href="mailto:enriquemartin1402@gmail.com" class="flex items-center transition hover:scale-105"><Badge>Available for hiring</Badge></a>
 	</div>
 </div>
