--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -168,6 +168,14 @@ const PROJECTS = [
 		image: 'personal-portfolio.webp',
 		tags: [TAGS.ASTRO, TAGS.TAILWIND],
 	},
+	{
+		title: 'Claudigo (Currently wroking)',
+		description:
+			'An open-source Claude Code like CLI tool completly written in Go. My objective is to build it using my own algorithms to handle serving the files to LLM providers. I am using Cobra, Bubbletea and Lipgloss to build the CLI.',
+		github: { link1: 'https://github.com/tyrellw3llick/claudigo' },
+		image: 'claudigo.webp',
+		tags: [TAGS.GO],
+	},
 ];
 ---
 
