--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@ import Github from './icons/Github.astro';
 
 <div class="space-y-4">
 	<h1 class="font-bold text-3xl sm:text-4xl md:text-5xl tracking-tight text-white">Hey, I'm Enrique</h1>
-	<p class="text-lg sm:text-xl [&>strong]:text-[#f0ee54] [&>strong]:font-semibold text-gray-300">I'm a <strong>full-stack</strong> developer specialized in building unique <strong>web3</strong> apps, <strong>automating</strong> workflows and integrating <strong>AI</strong>.</p>
+	<p class="text-lg sm:text-xl [&>strong]:text-[#f0ee54] [&>strong]:font-semibold text-gray-300">Results-driven <strong>full-stack engineer</strong> crafting scalable <strong>web3</strong> solutions, implementing intelligent <strong>automations</strong>, and leveraging <strong>AI technologies</strong> to solve complex business challenges.</p>
 </div>
 
 <nav class="flex flex-wrap mt-6 sm:mt-8 gap-3 sm:gap-4">
