--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -115,7 +115,7 @@ const PROJECTS = [
 	{
 		title: '.dotfiles',
 		description:
-			'It is more like a hobby than a pofessional project. I keep my dotfiles in a public repo to share with others and to have a backup of my configurations.',
+			'It is more like a hobby than a pofessional project. I keep my dotfiles in a public repo to share with others and to have a backup of my configurations. I love getting feedback and suggestions from other developers. I guess one is never satisfied with their dotfiles.',
 		github: { link1: 'https://github.com/tyrellw3llick/.dotfiles' },
 		image: 'dotfiles.webp',
 		tags: [TAGS.LUA, TAGS.BASH],
@@ -147,7 +147,7 @@ const PROJECTS = [
 	{
 		title: 'Letsgo',
 		description:
-			"A Go web application built while following Let's Go by Alex Edwards. This project implements a production-ready web app with features like routing, templating, and database integration, serving as a learning exercise in Go web development. Ecerything is built from scratch only using the standard library.",
+			"A Go web application built while following Let's Go by Alex Edwards. This project implements a production-ready web app with features like routing, templating, and database integration, serving as a learning exercise in Go web development. Everything is built from scratch only using the standard library.",
 		github: { link1: 'https://github.com/tyrellw3llick/letsgo' },
 		image: 'letsgo.webp',
 		tags: [TAGS.GO, TAGS.MySQL],
@@ -155,7 +155,7 @@ const PROJECTS = [
 	{
 		title: 'Wedjat AI',
 		description:
-			'Crypto tokens data scraper for the site gmg.one. The data is exported as json format or sent to a telegram bot. The bot is able to send the data to a channel or to a user.',
+			'Crypto token data scraper for the site gmgn.ai. The data is exported as json format or sent to a telegram bot. The bot is able to send the data to a channel or to a user.',
 		github: { link1: 'https://github.com/tyrellw3llick/WedjatAI' },
 		image: 'gmgn-scraper.webp',
 		tags: [TAGS.PYYHON, TAGS.PLAYWRIGHT, TAGS.TELEGRAM],
@@ -171,7 +171,7 @@ const PROJECTS = [
 	{
 		title: 'Claudigo (Currently wroking)',
 		description:
-			'An open-source Claude Code like CLI tool completly written in Go. My objective is to build it using my own algorithms to handle serving the files to LLM providers. I am using Cobra, Bubbletea and Lipgloss to build the CLI.',
+			'An open-source Claude Code like CLI tool completly written in Go. My objective is to build it using my own algorithms to handle serving the files to LLM providers. I am using Cobra, Bubbletea and Lipgloss to build the TUI.',
 		github: { link1: 'https://github.com/tyrellw3llick/claudigo' },
 		image: 'claudigo.webp',
 		tags: [TAGS.GO],
