--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,6 +14,7 @@ const { techName, techIcon: Icon } = Astro.props;
   .tech-card {
     position: relative;
     background-color: rgba(30, 41, 59, 0.5);
+		fill: #e5e5e5;
     border-radius: 0.75rem;
     padding: 1rem;
     display: flex;
