chore: change badge colors
fix accessibility problems

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -56,17 +56,17 @@ const TAGS = {
 	},
 	GITHUB: {
 		name: 'Github Actions',
-		class: 'bg-gray-900 text-white',
+		class: 'bg-neutral-600 text-white',
 		icon: Github,
 	},
 	MySQL: {
 		name: 'MySQL',
-		class: 'bg-[#00758f] text-white',
+		class: 'bg-[#e3963b] text-white',
 		icon: MySQL,
 	},
 	MONGODB: {
 		name: 'MongoDB',
-		class: 'bg-[#13aa52] text-white',
+		class: 'bg-green-900 text-white',
 		icon: Mongodb,
 	},
 	EXPRESS: {
@@ -76,12 +76,12 @@ const TAGS = {
 	},
 	VITE: {
 		name: 'Vite',
-		class: 'bg-yellow-600 text-white',
+		class: 'bg-orange-500 text-white',
 		icon: Vite,
 	},
 	DOCKER: {
 		name: 'Docker',
-		class: 'bg-[#3178c6] text-white',
+		class: 'bg-blue-900 text-white',
 		icon: Docker,
 	},
 	REACT: {
