feat: change mailto link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@ const year = new Date().getFullYear();
 					<a href="/#skills" class="hover:text-[var(--accent-color-yellow)]">Skills</a>
 				</li>
 				<li>
-					<a href="mailto:enriquemartin1402@gmail.com" class="hover:text-[var(--accent-color-yellow)]">Contact</a>
+					<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you" class="hover:text-[var(--accent-color-yellow)]">Contact</a>
 				</li>
 			</ul>
 		</div>
