--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@
 		<a href="/#experience">Experience</a>
 		<a href="/#projects">Projects</a>
 		<a href="/#skills">Skills</a>
-		<a href="mailto:enriquemartin1402@gmail.com">Contact</a>
+		<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you">Contact</a>
 	</nav>
 
 	<!-- Mobile menu (hidden by default) -->
@@ -30,7 +30,7 @@
 			<a href="/#experience">Experience</a>
 			<a href="/#projects">Projects</a>
 			<a href="/#skills">Skills</a>
-			<a href="mailto:enriquemartin1402@gmail.com">Contact</a>
+			<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you">Contact</a>
 		</nav>
 	</div>
 </header>
