--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ import Github from './icons/Github.astro';
 <div class="flex flex-col sm:flex-row sm:items-center gap-4 mb-6">
 	<div class="flex items-center gap-4">
 		<img src="profile-pic.webp" alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" loading={"eager"} />
-		<a href="mailto:enriquemartin1402@gmail.com" class="flex items-center transition hover:scale-105"><Badge>Available for hiring</Badge></a>
+		<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you" class="flex items-center transition hover:scale-105"><Badge>Available for hiring</Badge></a>
 	</div>
 </div>
 
@@ -18,7 +18,7 @@ import Github from './icons/Github.astro';
 </div>
 
 <nav class="flex flex-wrap mt-6 sm:mt-8 gap-3 sm:gap-4">
-	<SocialBadge href="mailto:enriquemartin1402@gmail.com">
+	<SocialBadge href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you">
 		<Mail class="size-4" />
 		Contact
 	</SocialBadge>
