--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import profilePic from '/public/profile-pic.webp';
 const year = new Date().getFullYear();
 ---
@@ -6,7 +7,7 @@ const year = new Date().getFullYear();
 	<div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
 		<div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-6">
 			<a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-				<img src="profile-pic.webp" alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" loading={"lazy"} />
+				<Image src={profilePic} alt="Enrique's profile character" class="rounded-full shadow-lg size-16 sm:size-20" loading={"lazy"} />
 				<span class="self-center text-xl sm:text-2xl font-semibold whitespace-nowrap text-white">Enrique Martín</span>
 			</a>
 			<ul class="flex flex-wrap items-center justify-center gap-y-2 gap-x-4 text-sm font-medium mb-4 sm:mb-0 text-gray-400">
@@ -21,6 +22,9 @@ const year = new Date().getFullYear();
 				</li>
 				<li>
 					<a href="/#skills" class="hover:text-[var(--accent-color-yellow)]">Skills</a>
+				</li>
+				<li>
+					<a href="/blog" class="hover:text-[var(--accent-color-yellow)]">Blog</a>
 				</li>
 				<li>
 					<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you" class="hover:text-[var(--accent-color-yellow)]">Contact</a>
