--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,7 @@
 		<a href="/#experience">Experience</a>
 		<a href="/#projects">Projects</a>
 		<a href="/#skills">Skills</a>
+		<a href="/blog">Blog</a>
 		<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you">Contact</a>
 	</nav>
 
@@ -30,6 +31,7 @@
 			<a href="/#experience">Experience</a>
 			<a href="/#projects">Projects</a>
 			<a href="/#skills">Skills</a>
+			<a href="/blog">Blog</a>
 			<a href="mailto:enriquemartin1402@gmail.com?subject=New%20project%20proposition&body=Hey%20Enrique,%20I%20am%20willing%20to%20work%20with%20you">Contact</a>
 		</nav>
 	</div>
@@ -73,6 +75,7 @@ a:hover {
 #mobile-menu:not(.hidden) nav a:nth-child(3) { transition-delay: 0.2s; }
 #mobile-menu:not(.hidden) nav a:nth-child(4) { transition-delay: 0.25s; }
 #mobile-menu:not(.hidden) nav a:nth-child(5) { transition-delay: 0.3s; }
+#mobile-menu:not(.hidden) nav a:nth-child(6) { transition-delay: 0.35s; }
 </style>
 
 <script>
