--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,12 +5,17 @@ import Head from '../components/Head.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-const { title } = Astro.props;
+interface Props {
+	title: string;
+	favIcon?: string;
+}
+
+const { title, favIcon = "/favicon.ico" } = Astro.props;
 ---
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 	<head>
-		<Head />
+		<Head favIcon={favIcon} />
 		<title>{title}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, viewport-fit=cover" />
 	</head>
