--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,7 +1,13 @@
+---
+interface Props {
+	favIcon?: string;
+}
+const { favIcon = "/favicon.ico" } = Astro.props;
+---
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Showcase of Enrique's work as a full stack developer. Projects, skills, and contact information.">
 <meta name="keywords" content="full stack developer, web developer, portfolio, projects, React, Node.js, Python, Go, Bun, Astro, NextJs, Spain, remote work">
 <link rel="canonical" href="https://www.yourdomain.com/">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href={favIcon} type="image/x-icon">
 <meta name="generator" content={Astro.generator} />
